--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 git+https://github.com/openai/whisper.git
+potassium
+torch==1.13.0
 transformers==4.25.1
 accelerate==0.15.0
 ffmpeg-python==0.2.0
 pandas==1.5.0
-torch==1.13.0
 torchtext==0.14.0
 torchvision==0.14.0
 sacremoses==0.0.53
