--- a/banana_config.json
+++ b/banana_config.json
@@ -1,24 +1,34 @@
 {
     "name": "potassium-app-whisper-diarization",
-    "category": "Speech to Text",
+    "category": "Audio",
     "example_input": {
         "prompt": "An interview about science",
         "num_speakers": 2,
         "filename": "someaudio.mp3",
-        "file": "base64 encoded audio file",
+        "file": "audio file",
+        "file_url": "http://localhost:5000/someaudio.mp3",
+        "file_string": "base64 encoded audio file",
+        "chunk_index": 0,
+        "chunk_count": 1,
+        "offset_seconds": 0,
         "webhook_url": "http://localhost:5000/webhook",
         "webhook_id": "someid"
     },
     "example_output": {
         "webhook_id": "someid",
+        "webhook_url": "http://localhost:5000/webhook",
+        "chunk_count": 1,
+        "chunk_index": 0,
+        "offset_seconds": 0,
+        "file_url": "http://localhost:5000/someaudio.mp3",
         "segments":[
             {
-                "start":"00:00:00",
-                "end":"00:00:12",
+                "start":"0",
+                "end":"12",
                 "speaker":"SPEAKER 1",
                 "text":"This is an example of a whisper + pyannote diarization."
             }
         ]
     },
-    "version": "1"
+    "version": "2"
 }
