--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-git+https://github.com/openai/whisper.git
+faster-whisper==0.7.1
 potassium
 torch==1.13.0
 transformers==4.25.1
@@ -18,3 +18,4 @@ pysrt==1.1.2
 psutil==5.9.2
 requests==2.28.2
 pyannote.audio==2.1.1
+python-magic==0.4.27
